--- a/MyMovies.Web/Views/Movie/Index.cshtml
+++ b/MyMovies.Web/Views/Movie/Index.cshtml
@@ -1,5 +1,17 @@
-﻿@{
-    ViewBag.Title = "Index";
-}
+﻿
+<div id="content" role="main">
+    <div class="page-header dark">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>Category: Horror</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<h2>Index</h2>
+    <div class="container">
+        <h1>Test</h1>
+    </div>
+
+</div>
